# Github-Test-Lesson-Higher

./: 5d.py  Networks starter.py  instructions.md  linearSearch.py  main.py  networksProgram.py  readme.md  run.sh  teamQ.py  while loop.py  whileloop.py
.devcontainer/: devcontainer.json  init-db.sh
0. Programming fundamentals/: advancedInstructions.md  instructions.md
2. Arrays and Records/: arrays and records.md
3. File Handling/: athletes.csv
4. Standard Algorithms/: instructions.md
5. Olympics Starter/: olympicsExample.py
Advanced Higher/: db_demo_mysql.py  init.sql  main.sql  run_sql.py
Advanced Higher/Example DB/: main.sql
Advanced Higher/SQA Hotel Bookings/: init.sql  main.sql  run_sql.py
Databases/Spotify/: README.md  main.sql  run.sh
Functions and Procedures/: main.py
Mock Test/: database.db  main.sql  pyproject.toml
Mock Test/setup/: setup.sql
Olympics Starter/: olympicsExample.py  topCountries.txt
Standard Algorithms/: lagganlia_student_activities.csv
file handling/: files handling.md  students.csv
